samples/_failures_safe/1761358239_318746_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6711729b.c: In function ‘main’:
./samples/SAFE/__tmp_6711729b.c:143:5: error: expected declaration or statement at end of input
  143 |     printf("ERROR: %d\n", severity_counts[3]);
      |     ^~~~~~
